# test-pw-user-hub-web-app

./: Dockerfile  Dockerfile.tests  Makefile  README.md  conftest.py  docker-compose.linux.yml  docker-compose.yml  docker.txt  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.sh
.github/workflows/: django.yml  docker-image.yml  pylint.yml
config/: config.yaml  logging.yaml  logging_conf.py  settings.py
django_helpers/: logging.py  manage_proxy.py  seed_multicolumn_sort.py
docker/: django-logging.ini  wait-for-it.sh
pages/: __init__.py  base_page.py  login_page.py  navbar.py  profile_pages.py  settings_page.py  signup_page.py  users_page.py  users_table_page.py
pages/components/: header.py  toast.py
scripts/: run_all.sh
tests/: conftest.py  test_dashboard_page.py  test_excel_import.py  test_excel_import_and_sorting.py  test_i18n_and_theme.py  test_i18n_theme_smoke.py  test_login.py  test_login_page.py  test_profile.py  test_profile_pages.py  test_settings.py  test_settings_page.py  test_settings_page_preferences.py  test_signup.py  test_stats.py  test_theme_and_i18n.py  test_theme_and_locale.py  test_users_page.py  test_users_page_sorting.py  test_users_table.py
tests/fixtures/: auth_fixtures.py  browser_matrix.py  data_seed_fixtures.py  session_fixtures.py  theme_locale_fixtures.py
tests/pages/: base.py  base_page.py  change_password_page.py  dashboard_page.py  excel_import_page.py  login_page.py  navbar.py  profile_edit_page.py  profile_pages.py  profile_view_page.py  reset_password_page.py  settings_page.py  signup_page.py  stats_page.py  user_delete_confirm_page.py  users_page.py
tests/pages/components/: navbar.py
tests/utils/: api.py  config.py  excel.py  logger.py
utils/: api_client.py  file_utils.py  temp_encr.py  test_data.py  time_travel.py  waiters.py
