[project]
name = "users-app-e2e"
version = "0.1.0"
description = "Playwright + Pytest E2E suite for Users App (Django REST + React)."
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.2",
    "pytest-xdist>=3.6.1",
    "pytest-playwright>=0.6.2",
    "playwright>=1.48.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.4",
    "openpyxl>=3.1.5",
    "rich>=13.9.2",
    "pyyaml>=6.0.2"
]

[tool.pytest.ini_options]
addopts = "-ra -q --headed"
testpaths = ["tests"]
markers = [
    "smoke: critical smoke tests",
    "regression: full regression",
    "admin: requires admin role",
    "usersetup: data/setup helpers",
]
