[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-tests"
version = "0.1.0"
description = "Playwright + Pytest POM UI tests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.2",
  "pytest-xdist>=3.6",
  "pytest-playwright>=0.5.7",
  "playwright>=1.48",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "Django>=5.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --disable-warnings"
markers = [
  "smoke: fast confidence checks",
  "regression: deeper coverage",
  "access: role/permission scenarios",
]
